Admin menu z-index fixes

--- a/css/screen.css
+++ b/css/screen.css
@@ -342,7 +342,7 @@ td {
   position: absolute;
 }
 
-#g-site-menu ul {
+#g-site-menu ul, #g-site-menu ul ul {
   margin-bottom: 0 !important;
 }
 
@@ -520,10 +520,12 @@ td {
 #g-banner {
   background-color: #171717;
   border-bottom: 1px solid #050505;
-	filter:alpha(opacity=80);
-	-moz-opacity:.8;
-	-webkit-opacity:.8;
-	opacity:.8;
+	filter:alpha(opacity=90);
+	-moz-opacity:.9;
+	-webkit-opacity:.9;
+	opacity:.9;
+  position: relative;
+  z-index: 100000;
 }
 
 #g-content {
@@ -534,10 +536,10 @@ td {
   background-color: #171717;
   border-top: 1px solid #050505;
   
-	filter:alpha(opacity=60);
-	-moz-opacity:.6;
-	-webkit-opacity:.6;
-	opacity:.6;
+	filter:alpha(opacity=80);
+	-moz-opacity:.8;
+	-webkit-opacity:.8;
+	opacity:.8;
 }
 
 .g-block h2 {
@@ -630,6 +632,12 @@ td {
   background-color: #000000;
 	background:url(../images/gradient.jpg);
 	z-index:9999 !important;
+	border:0px;
+}
+
+.sf-menu a, .sf-menu a:hover {
+  border:0px;
+  outline:1px solid #000000;
 }
 
 .sf-menu li.sfHover,
@@ -651,7 +659,7 @@ textarea {
 }
 
 input {
-  font-size:12px;
+  font-size:12px !important;
 }
 
 input[type="submit"],
